<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_open"
        android:orderInCategory="100"
        android:title="@string/label_open"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_open_folder"/>

    <item
        android:id="@+id/action_save"
        android:orderInCategory="200"
        android:title="@string/label_save"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_save"
        />
    <item
        android:id="@+id/action_share"
        android:orderInCategory="300"
        android:title="@string/label_share"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_share"
        />
</menu>