<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingLeft="@dimen/margin_horizontal"
    android:paddingRight="@dimen/margin_horizontal"
    android:background="#212121"
    tools:context=".Fragments.SettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/margin_10"
        android:paddingTop="@dimen/margin_10">


        <TextView
            android:layout_width="@dimen/lbl_edit_image_control"
            android:layout_height="wrap_content"
            android:text="@string/label_brightness"
            android:textColor="@android:color/white"
            />

        <SeekBar
            android:id="@+id/seekbar_brightness"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxHeight="3dp"
            android:minHeight="3dp"
            android:layout_weight="1"
            android:progressDrawable="@drawable/custom_seekbar"
            android:thumbTint="@color/thumb_seekbar"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/padding_10"
        android:paddingTop="@dimen/padding_10">


        <TextView
            android:layout_width="@dimen/lbl_edit_image_control"
            android:layout_height="wrap_content"
            android:text="@string/labe_contrast"
            android:textColor="@android:color/white"/>

        <SeekBar
            android:id="@+id/seekbar_contrast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxHeight="3dp"
            android:minHeight="3dp"
            android:layout_weight="1"
            android:thumbTint="@color/thumb_seekbar"
            android:progressDrawable="@drawable/custom_seekbar"
           />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/padding_10"
        android:paddingTop="@dimen/padding_10">

        <TextView
            android:layout_width="@dimen/lbl_edit_image_control"
            android:layout_height="wrap_content"
            android:text="@string/label_saturation"
            android:textColor="@android:color/white"/>

        <SeekBar
            android:id="@+id/seekbar_saturation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxHeight="3dp"
            android:minHeight="3dp"
            android:layout_weight="1"
            android:thumbTint="@color/thumb_seekbar"
            android:progressDrawable="@drawable/custom_seekbar"/>
    </LinearLayout>

</LinearLayout>